(lang dune 3.4)

(name chatter)

(version 0.1)

(authors "Gavin Gray <gavinleroy6@gmail.com>")

; (implicit_transitive_deps true)
; (generate_opam_files true)
; (formatting
;  (enabled_for dune))
; (license GPL-3.0-only)

; (source
;  (uri https://githhub.com/gavinleroy/chatter.git))

; (package
;  (name chatter)
;  (synopsis
;   "A simple chat client+server")

;  (depends
;   ; tyre
;   ; (alcotest :with-test)
;   (ocaml
;    (>= 5.1))
;   ; (ocaml-lsp-server :with-doc)
;   ; (ocp-indent :with-doc)
;   ; (odig :with-doc)
;   ; (odoc :with-doc)
;   ; (utop :with-test)
;   dune))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
